--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 Revision history for Test-Pod-Snippets
 
+0.02    Sun Jan 28, 2007
+    * Added mention of Test::Inline in the pod
+    * Added Test::Signature test
+
 0.01    Wed Aug 23, 2006
         First version, released on an unsuspecting world.
